# proton

./: .envrc  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  devenv.nix  docker-compose.yml  flake.nix  nginx.conf  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: app-release.yml  auto-merge-release.yml  cachix.yml  checks.yml  create-release.yml  release-trigger.yml  release.yml
app/: package.json  result  svelte.config.js  tailwind.config.ts  vite.config.js
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  mc_auth.rs  offline.rs  settings.rs  store.rs
app/src-tauri/src/account/: auth.rs  commands.rs  info.rs  mc_auth.rs  mod.rs  skin_store.rs  store.rs
app/src-tauri/src/profiles/: commands.rs  config.rs  instance.rs  mod.rs  profile.rs  store.rs  watcher.rs
app/src-tauri/src/profiles/commands/: home.rs  instance.rs  logs.rs  mod.rs  profile.rs  quick_play.rs
app/src-tauri/src/utils/: dir.rs  download.rs  file.rs  future.rs  log.rs  mod.rs  updater.rs
app/src-tauri/src/versions/: commands.rs  download.rs  event.rs  launch.rs  maven.rs  mod.rs  paths.rs  store.rs  util.rs
app/src-tauri/src/versions/download/: assets.rs  java.rs  libraries.rs  manifest.rs  mod.rs
app/src-tauri/src/versions/loader/: fabric.rs  forge.rs  mod.rs  util.rs
app/src-tauri/src/versions/meta/: java.rs  minecraft.rs  mod.rs
app/src/lib/: data-state.svelte.ts  data_state.svelte.ts  state.svelte.ts  util.svelte.ts
app/src/lib/components/: Header.svelte  LogWindow.svelte  ProfileSelector.svelte  Sidebar.svelte
app/src/lib/components/account/: AccountImage.svelte  AccountSelector.svelte  MainSkinViewer.svelte  MiniSkinViewer.svelte
app/src/lib/components/form/: DestroyDialog.svelte  FormImage.svelte  FormSelectUpdate.svelte  ImageInput.svelte  SwitchTooltip.svelte
app/src/lib/components/nav/: Header.svelte  Sidebar.svelte  SimpleSidebar.svelte
app/src/lib/components/profile/: DownloadNotification.svelte  DownloadNotificationCancel.svelte  ProfileExternalLink.svelte  ProfileIcon.svelte  ProfileListButton.svelte  QuickPlayIcon.svelte
app/src/lib/components/settings/: GameSettings.svelte  JavaSettings.svelte
app/src/lib/tauri/: account.svelte.ts  events.svelte.ts  home.svelte.ts  instance.svelte.ts  logs.svelte.ts  offline.svelte.ts  profile.svelte.ts  quick-play.svelte.ts  quick_play.svelte.ts  settings.svelte.ts  updater.svelte.ts  versions.svelte.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
app/src/routes/home/: +page.svelte
app/src/routes/instances/: +page.svelte
app/src/routes/instances/info/: +layout.svelte  +layout.ts  +page.server.ts  +page.ts  store.svelte.ts
app/src/routes/instances/info/logs/: +page.svelte
app/src/routes/profiles/: +page.server.ts  +page.svelte  FormImage.svelte  ImageInput.svelte  schema.svelte.ts
app/src/routes/profiles/info/: +layout.svelte  +layout.ts  +page.server.ts  +page.ts  store.svelte.ts
app/src/routes/profiles/info/instances/: +page.svelte
app/src/routes/profiles/info/logs/: +page.svelte
app/src/routes/profiles/info/quick_play/: +layout.svelte  +page.svelte  +page.ts  QuickPlayList.svelte  store.svelte.ts
app/src/routes/profiles/info/quick_play/multiplayer/: +page.svelte
app/src/routes/profiles/info/quick_play/realms/: +page.svelte
app/src/routes/profiles/info/quick_play/singleplayer/: +page.svelte
app/src/routes/profiles/info/settings/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts  schema.svelte.ts
app/src/routes/profiles/info/settings/general/: +page.server.ts  +page.svelte
app/src/routes/profiles/info/settings/java/: +page.svelte
app/src/routes/profiles/info/settings/minecraft/: +page.svelte
app/src/routes/settings/: +layout.svelte  +page.server.ts
app/src/routes/settings/about/: +page.svelte
app/src/routes/settings/accounts/: +page.svelte
app/src/routes/settings/capes/: +page.svelte
app/src/routes/settings/java/: +page.svelte
app/src/routes/settings/minecraft/: +page.svelte
app/src/routes/settings/skins/: +page.svelte
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  error.rs  main.rs
