[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
log = "0.4.26"
loki-logger = "0.1.3"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
openssl = { version = "0.10.71", features = ["vendored"] }
dotenv = "0.15.0"
