[package]
name = "proton-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
log = "0.4.29"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
openssl = { version = "0.10.75", features = ["vendored"] }
dotenv = "0.15.0"
fern = "0.7.1"
env_logger = "0.11.8"

[[bin]]
name = "proton-backend"
path = "src/main.rs"
