[package]
name = "proton"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proton_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tauri-plugin-store = "2.3.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json", "multipart", "stream"] }
tokio = { version = "1.46.1", features = ["process"] }
base64 = "0.22.1"
image = "0.25.6"
uuid = { version = "1.17.0", features = ["v4"] }
sha1 = "0.10.6"
hex = "0.4.3"
log = "0.4.27"
zip = "4.3.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-process = "2.3.0"
notify = "8.1.0"
async-trait = "0.1.88"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.0"
