[package]
name = "proton"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proton_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-store = "2.4.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json", "multipart", "stream"] }
tokio = { version = "1.47.1", features = ["process"] }
base64 = "0.22.1"
image = "0.25.8"
uuid = { version = "1.18.1", features = ["v4"] }
sha1 = "0.10.6"
hex = "0.4.3"
log = "0.4.28"
tauri-plugin-log = "2.7.0"
tauri-plugin-process = "2.3.0"
notify = "8.2.0"
async-trait = "0.1.89"
serde-xml-rs = "0.8.1"
async_zip = { version = "0.0.18", features = [
  "chrono",
  "tokio-fs",
  "deflate",
  "bzip2",
  "zstd",
  "deflate64",
] }
tokio-util = { version = "0.7.16", features = ["compat"] }
sysinfo = "0.37.1"
futures-util = "0.3.31"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.0"
